--- a/speakerreg.ipynb
+++ b/speakerreg.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/dauinh/sid/blob/main/speakerreg.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -164,7 +154,6 @@
         "        self.root_path = root\n",
         "        self.samples = self.make_samples(num_classes)\n",
         "        self.labels, self.label2idx = self.load_labels(self.samples)\n",
-        "        # self.targets = [s[1] for s in self.samples]\n",
         "\n",
         "    def __len__(self) -> int:\n",
         "        return len(self.samples)\n",
@@ -241,10 +230,6 @@
         "            hop_length=image_width\n",
         "        )\n",
         "        resize = torchvision.transforms.Resize((32, 128))\n",
-        "        # spec_db = torchaudio.transforms.AmplitudeToDB(stype=\"amplitude\", top_db=80)\n",
-        "        # image_transform = transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
-        "        # spec = transform(waveform)\n",
-        "        # print('spec', spec.shape)\n",
         "        X = torch.transpose(spec, 1, 2) # X.shape = (1, audio_len, freq_bin)\n",
         "        X = torch.real(X)\n",
         "        X = torch.abs(X)\n",
@@ -262,16 +247,6 @@
         "            # print('parts', parts.shape)\n",
         "        else:\n",
         "            parts = X\n",
-        "        \n",
-        "        # plot_spectrogram(spec.view(spec.shape[1], spec.shape[2]), title='origin')\n",
-        "        # plot1 = torch.zeros((partsCount * image_width, spec.shape[1]))\n",
-        "        # for i in range(partsCount):\n",
-        "        #     p = i * image_width\n",
-        "        #     plot1[p:p+image_width,:] = parts[i]\n",
-        "        #     # print(plot1[:,i:i+image_width].shape)\n",
-        "        # plot1 = torch.transpose(plot1, 0, 1)\n",
-        "        # print(spec.shape, plot1.shape)\n",
-        "        # plot_spectrogram(plot1, title='reshaped')\n",
         "\n",
         "        parts = resize(parts)\n",
         "        Y = self.label2idx[label]\n",
@@ -407,9 +382,6 @@
         "num_classes = 5   # 395 in vox, 40 in librispeech, 5 in leaderspeech\n",
         "batch_size = 1\n",
         "learning_rate = 0.0001\n",
-        "# features_size = 128\n",
-        "# hidden_size = 64\n",
-        "# num_layers = 3\n",
         "\n",
         "# Device configuration\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
@@ -450,30 +422,7 @@
       },
       "outputs": [],
       "source": [
-        "# RNN model\n",
-        "# rnn_model = RNN(features_size, hidden_size, num_layers, num_classes, device).to(device)\n",
-        "# print(model)\n",
-        "\n",
-        "# CNN model\n",
-        "cnn_model = SpeakerCNN(num_classes)\n",
-        "\n",
-        "# ResNet34\n",
-        "# from torchvision.models import resnet34\n",
-        "# # Load ResNet34 CV model\n",
-        "# resnet_model = resnet34(weights=True)\n",
-        "# # Adjusted the last layer output for our binary classification use case\n",
-        "# resnet_model.fc = nn.Linear(512, num_classes)\n",
-        "# # Adjust the first convolution neural network (CNN) layer for our use case\n",
-        "# resnet_model.conv1 = nn.Conv2d(\n",
-        "#   1,\n",
-        "#   64,\n",
-        "#   kernel_size=(7, 7),\n",
-        "#   stride=(2, 2),\n",
-        "#   padding=(3, 3),\n",
-        "#   bias=False\n",
-        "# )\n",
-        "\n",
-        "model = cnn_model\n",
+        "model = SpeakerCNN(num_classes)\n",
         "model.to(device)\n",
         "\n",
         "# Loss and optimizer\n",
@@ -656,11 +605,10 @@
         "    acc_plt.append(round((100 * correct/total_steps), 5))\n",
         "\n",
         "# Plot graph\n",
-        "step_per_epoch = [i + 1 for i in range(num_epochs)]\n",
         "# Loss graph\n",
         "plt.figure(1)\n",
         "fig, axs = plt.subplots()\n",
-        "plt.plot(step_per_epoch, loss_plt)\n",
+        "plt.plot(loss_plt)\n",
         "axs.set_title('Loss: '+ title)\n",
         "axs.set_ylabel('Loss')\n",
         "axs.set_xlabel('Epoch')\n",
@@ -668,7 +616,7 @@
         "# Accuracy graph\n",
         "plt.figure(2)\n",
         "fig, axs = plt.subplots()\n",
-        "plt.plot(step_per_epoch, acc_plt, color='orange')\n",
+        "plt.plot(acc_plt, color='orange')\n",
         "axs.set_title('Accuracy: '+ title)\n",
         "axs.set_ylabel('Accuracy')\n",
         "axs.set_xlabel('Epoch')\n",
@@ -768,7 +716,6 @@
       ],
       "source": [
         "# Load model\n",
-        "# saved = RNN(input_size, hidden_size, num_layers, num_classes)\n",
         "model = SpeakerCNN(num_classes)\n",
         "model.load_state_dict(torch.load('model.ckpt'))\n",
         "model.to(device)\n",
@@ -781,7 +728,6 @@
         "\n",
         "        for j in range(images.shape[1]):\n",
         "            single_image = images[:,j:j + 1,:,:]\n",
-        "        # images = images.view(batch_size, images.shape[1], features_size) # RNN\n",
         "            outputs = model(single_image)\n",
         "            _, predicted = torch.max(outputs.data, 1)\n",
         "            total += labels.size(0)\n",
@@ -855,8 +801,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOILuxpdUcAJ0HdLZZT2sLk",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOsKQyKS6vze6AI+sXMr33r"
     },
     "gpuClass": "standard",
     "kernelspec": {
